[gd_scene load_steps=5 format=1]

[ext_resource path="res://scripts/BossPart.gd" type="Script" id=1]
[ext_resource path="res://objects/RegularPolygon.tscn" type="PackedScene" id=2]
[ext_resource path="res://sound/Hit_Hurt4.smp" type="Sample" id=3]

[sub_resource type="SampleLibrary" id=1]

samples/Hit_Hurt4 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 3 ) }

[node name="BossPart" type="Node2D"]

script/script = ExtResource( 1 )

[node name="RegularPolygon" parent="." groups=[ "damage_player_solid" ] instance=ExtResource( 2 )]

editor/display_folded = true
visibility/behind_parent = true
z/z = 10
circle_collision = false

[node name="Polygon2D" parent="RegularPolygon"]

texture/scale = Vector2( 2, 2 )

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 8
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 1
default/filter/cutoff = 1000.0
default/filter/resonance = 0.5
default/filter/gain = 0.0
default/reverb_room = 3
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="area_enter" from="RegularPolygon" to="." method="_on_RegularPolygon_area_enter"]


[editable path="RegularPolygon"]
